# kea_ai

./: .gitignore
man1/: man1.py
man1_uv/: README.md  main.py  man1.ipynb  pyproject.toml
u10/: main.py  nyest u10.ipynb  pyproject.toml  snake 001 - human player.ipynb  snake 002 - with controller.ipynb  snake 003.ipynb  species.py  tsm.ipynb
u10/premade/: ga_controller.py  ga_snake.py  game_controller.py  snake 003 - GA.ipynb  snake.py  snake_game.py  vector.py
u10/premade/ga_models/: activation.py  ga_protocol.py  ga_simple.py
u2/: homework fra u2 - check dataset.ipynb  u2_demo.ipynb  u3 undervisning.ipynb
u3_animation/: .gitignore  LICENSE  README.adoc  gd.py  notes.txt  requirements.txt  u3 - animated data.ipynb
u4/: u4 - test kode - fra L10.html  u4 - test kode - fra L10.ipynb
u6/: filename.py  u6.py
u7/: DNN.ipynb  main.py  pyproject.toml
u9/: lecture12 - bottom assignment.ipynb  lecture14 - bottom assignment-baseline.ipynb  lecture14 - bottom assignment.ipynb  main.py  pyproject.toml
