[project]
name = "u9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.8",
]
